--- a/src/app/app-dev/app-dev.component.html
+++ b/src/app/app-dev/app-dev.component.html
@@ -1,19 +1,19 @@
 <div class="row" style="margin-top: 8%;padding: 0px 40px;">
-  <div class="col s6 one">
+  <div class="col l6 s12">
   <h1 class="subHead">WEB DEVELOPMENT</h1>
-  <div class="floatText">M</div>
+  <div class="floatText hide-on-small-only">M</div>
   <h3 class="line">Make a mark with our cutting-edge web application development</h3>
   <h6 class="our">Our company has been developing web applications for the custom business requirements of all our esteemed clients. Our developer’s skills & experience and cutting-edge technology will deliver you with robust web application.</h6>
   <span class="uniRedBtn" routerLink="/Get-started">Get Quote <i class="fas fa-arrow-right"></i></span>
   </div>
-  <div class="col s3 two center">
+  <div class="col l3 s12 serviceMIssue center">
     <div><img class="UIimg" width="100%" src="../../assets/images/web-commerce.webp"></div>
     <h6 class="center clientName">Ecommerce</h6>
     <p class="center our">Provide you the ecommerce 
 platform with enriched UX/UI.</p>
   <a href="https://www.youtube.com/watch?v=BVMsRltq2yU&feature=youtu.be"><i class="fab fa-youtube"></i></a>
   </div>
-  <div class="col s3 three center">
+  <div class="col l3 s12 center">
     <div><img class="UIimg" width="100%" src="../../assets/images/web-erp.webp"></div>
     <h6 class="center clientName">ERP Solutions</h6>
     <p class="center our">Fetch High Return on 
@@ -23,16 +23,16 @@ Investment through Our Robust ERP Solutions.</p>
 </div>
 
 <div class="row" style="margin-top: 13%;padding: 0px 50px;margin-bottom: 0%;">
-<div class="floatText">IN</div>
-  <div class="col s5">
+<div class="floatText hide-on-small-only">IN</div>
+  <div class="col l5 s12">
     <h3 class="line">Increased average page views</h3>
   </div>
-  <div class="col s7 our" style="margin-bottom: 0%;">A web page may be shaped for individual or specialized purposes. Technology has made web development a suitable procedure. Everyone can have a website of their individually, but not everyone can, for occurrence, have a show on TV. Now to get on with the search for Web Development Company, below are some prime areas you should look at, before hiring a web development company: </div>
+  <div class="col l7 s12 our" style="margin-bottom: 0%;">A web page may be shaped for individual or specialized purposes. Technology has made web development a suitable procedure. Everyone can have a website of their individually, but not everyone can, for occurrence, have a show on TV. Now to get on with the search for Web Development Company, below are some prime areas you should look at, before hiring a web development company: </div>
  </div>
 
  <div class="row">
-  <div class="col s5"></div>
-  <div class="col s3">
+  <div class="col l5 s12"></div>
+  <div class="col l3 s12">
     <ul class="our" style="padding-left: 10px;">
                                     <li><i class="fas fa-cannabis"></i> Able understand both back-end and front-end development</li>
                                     <li><i class="fas fa-cannabis"></i> Do not specialize in only one back-end technology</li>
@@ -40,7 +40,7 @@ Investment through Our Robust ERP Solutions.</p>
                                     <li><i class="fas fa-cannabis"></i> Understanding of advertising schemes encompassing the projects</li>
                                 </ul>
   </div>
-  <div class="col s3">
+  <div class="col l3 s12">
     <ul class="our">
                                     <li><i class="fas fa-cannabis"></i> Invests time in explore and development</li>
                                     <li><i class="fas fa-cannabis"></i> Pliable to change</li>
