--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,16 +5,44 @@
 
 
 <div class="row" style="margin-top:8%;">
-        <div class="col center s12">
+        <div class="col center l1 s12"></div>
+        <div class="col center l5 s12">
                 <img  src="../../assets/images/my-logo.png" id="logo">
-                
-                <div class="typed qoutes textcenter">
-                <div>We are providing the Service for " </div><div class="typestyle typed-element"></div>  
-                </div>
-                <div class="row mobileBtn center" style="padding-top:34px;">
+                <p class="mobileC" style="letter-spacing:0.4px;margin-bottom:2% !important;">" At Unitrix, we believe your business deserves better Application - application that’s ready to go, easy to setup and use, and requires minimal customization. All of our service live up to this promise and are backed by our world-class support. "</p>
+                <div class="row mobileBtn center">
                 <span class="uniRedBtn" routerLink="/Get-started">GET STARTED</span>
         </div>
         </div>
+        <div class="col l5 s12"> 
+        <img width="90%" src="../../assets/images/Uback.gif" style="margin-top: 4%;">
+
+                <div class="provideService">
+                        <div class="row center">
+                        <div class="col ss l4 s4">
+                                <div> <span class="mydot"></span>UI/UX</div>
+                        </div>
+                        <div class="col ss l4 s4">
+                                <div> <span class="mydot"></span>Web/Mobile Application</div>
+                        </div>
+                        <div class="col ss l4 s4">
+                                <div> <span class="mydot"></span>Desktop Application</div>
+                        </div>
+                        </div>
+
+                        <div class="row center">
+                        <div class="col ss l4 s4">
+                                <div> <span class="mydot"></span>PhotoOutSourcing</div>
+                        </div>
+                        <div class="col ss l4 s4">
+                                <div> <span class="mydot"></span>Digital Marketing</div>
+                        </div>
+                        <div class="col ss l4 s4">
+                                <div> <span class="mydot"></span>SEO/Branding</div>
+                        </div>
+                        </div>
+                </div>
+        </div>
+        <div class="col center l1 s12"></div>
 </div>
 
 
@@ -34,32 +62,32 @@
         <div class="Innovation center">Innovation for Everyone..</div>
         <div class="col s12">
                 <div class="row">
-                        <div class="col s4 center">
-                                <span class="weBtn mobileWE" style="background:#039be5"><i class="fas fa-lightbulb"></i></span>Idea
+                        <div class="col l4 s4 center">
+                                <span class="weBtn mobileWE" style="background:#039be5"><i class="fas fa-lightbulb"></i></span><div class="design">Idea</div>
                                 <div class="row">
                                         <h6 class="weContent">Initially begin with a conceptualized session to exhibit ideas and features...</h6>
                                 </div>
                         </div>
-                        <div class="col s4 center">
-                                <span class="weBtn mobileWE" style="background:#4CAF50"><i class="fas fa-palette"></i></span>Design
+                        <div class="col l4 s4 center">
+                                <span class="weBtn mobileWE" style="background:#4CAF50"><i class="fas fa-palette"></i></span><div class="design">Design</div>
                                 <h6 class="weContent">Pursue user interface to all boards and devise designing options for the application.</h6>
                         </div>
-                        <div class="col s4 center">
-                                <span class="weBtn mobileWE" style="background:#ff833b"><i class="fas fa-file-code"></i></span>Development
+                        <div class="col l4 s4 center">
+                                <span class="weBtn mobileWE" style="background:#ff833b"><i class="fas fa-file-code"></i></span><div class="design">Development</div>
                                 <h6 class="weContent">Function in consistent sprints to transform design, feature of the application as specified.</h6>
                         </div>
                 </div>
                 <div class="row">
-                        <div class="col s4 center">
-                                <span class="weBtn mobileWE" style="background:#F44336"><i class="fas fa-podcast"></i></span>Deployment
+                        <div class="col l4 s4 center">
+                                <span class="weBtn mobileWE" style="background:#F44336"><i class="fas fa-podcast"></i></span><div class="design">Deployment</div>
                                 <h6 class="weContent">Collect assessment details from model view presenter built ,iterate and present our product.</h6>
                         </div>
-                        <div class="col s4 center">
-                                <span class="weBtn mobileWE" style="background:#653bcb"><i class="fas fa-charging-station"></i></span>Testing
+                        <div class="col l4 s4 center">
+                                <span class="weBtn mobileWE" style="background:#653bcb"><i class="fas fa-charging-station"></i></span><div class="design">Testing</div>
                                 <h6 class="weContent">Boundless cooperation with peer programming and periodic testing boundaries.</h6>
                         </div>
-                        <div class="col s4 center">
-                                <span class="weBtn mobileWE" style="background:#cb56cd"><i class="fas fa-tools"></i></span>Maintenance
+                        <div class="col l4 s4 center">
+                                <span class="weBtn mobileWE" style="background:#cb56cd"><i class="fas fa-tools"></i></span><div class="design">Maintenance</div>
                                 <h6 class="weContent">We provide round the clock service until the work gets exhausted...</h6>
                         </div>
                 </div>
@@ -71,31 +99,31 @@
 <!-- Service -->
 <div class="service border" style="margin-top:10% !important;">
         <h4 class="we">Services..</h4>
-        <div class="row" style="margin-top:4%;">
-                <div class="col s4 serviceB" routerLink="/UI-Development">
+        <div class="row Row1" style="margin-top:4%;">
+                <div class="col l4 s12 serviceB" routerLink="/UI-Development">
                         <h6 class="Ser">UI/UX Development</h6>
                         <p><i class="fas fa-palette" style="color:#039be5"></i> UI/UX - We develope a stylish and colourful static / Dynamic website(Responsive) using <a href="https://en.wikipedia.org/wiki/HTML5">HTML5</a>, <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets#CSS_3">CSS3</a>,  <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript</a> and <a href="https://wordpress.com/"> wordpress</a>, and provide a support, maintenance, Search Engine optimization and hosting. For UX we have a best professional team to design a template, logo, wireframe etc.</p>
                 </div>
-                <div class="col s4 serviceB" routerLink="/App-Development">
+                <div class="col l4 s12 serviceB" routerLink="/App-Development">
                                 <h6 class="Ser">Application Development</h6>
                                 <p><i class="fas fa-seedling"  style="color:#1aa93a"></i> We provide a awesome Responsive Web Application, Our team worked with Latest Technology (<a href="https://nodejs.org/en/">NodeJS</a> ,Python AI/MI, WebPack, Bower, Babel and Testing) and Frameworks (<a href="https://angular.io/">Angular</a>/<a href="https://reactjs.org/">React</a>/<a href="https://vuejs.org/">Vue</a>/<a href="https://www.djangoproject.com/">Django Python</a>). also provide a end to end support and cloud <a href="https://firebase.google.com/">Firebase </a> (hosting, database, storage, Authentication etc..) interaction.  </p>
                 </div>
-                <div class="col s4 serviceB" routerLink="/Desktop-Development">
+                <div class="col l4 s12 serviceB" routerLink="/Desktop-Development">
                                 <h6 class="Ser">Desktop Application</h6>
                                 <p><i class="fas fa-laptop-code"  style="color:#ff833b"></i> Desktop Application - we provide a desktop application for all platform, here we use <a href="https://electronjs.org/">Electron</a> Framework that provide to write a code onces then we can generate application in all platform ios, Windows and Linux ,we include <a href="https://www.google.com/search?q=js+frameworks&rlz=1C1CHBF_enIN844IN844&oq=JS+frame&aqs=chrome.0.0j69i57j0l4.4660j1j7&sourceid=chrome&ie=UTF-8">JS framework</a> in the electron so Application look stylish and performance high.</p>
                 </div>
                 
         </div>
         <div class="row Row2">
-                <div class="col s4 serviceB" routerLink="/Mobile-Development">
+                <div class="col l4 s12 serviceB" routerLink="/Mobile-Development">
                                 <h6 class="Ser">Mobile Development</h6>
                                 <p><i class="fas fa-mobile-alt"  style="color:#dc13cb"></i> Mobile Apps - now a day developer and client facing a problem to create a app for All platform, because of cost and time problem, so we provide a Hybrid Mobile Application using <a href="https://ionicframework.com/">Ionic</a> Framework and Google <a href="https://flutter.dev/">Flutter</a> (Dart language). </p>
                 </div>
-                <div class="col s4 serviceB" routerLink="/Photo-Outsourcing">
+                <div class="col l4 s12 serviceB" routerLink="/Photo-Outsourcing">
                                 <h6 class="Ser">PhotoOutSourcing</h6>
                                 <p><i class="fas fa-camera-retro"  style="color:#c21508"></i> We provide Consistent image output with quick turnaround time. Our team work with latest tools like <a href="https://www.adobe.com/products/photoshop.html ">Adobe Photoshop</a>, Photoshop CC, Lightroom CC, Lightroom Classic, Ptgui for image stitching.</p>
                 </div>
-                <div class="col s4 serviceB" routerLink="/seo">
+                <div class="col l4 s12 serviceB" routerLink="/seo">
                                 <h6 class="Ser">SEO</h6>
                                 <p><i class="fas fa-globe-americas"  style="color:#5b4296"></i> Ranking First and higher growth is always everybody’s goal. Unitrix realise your goal and makes it reality by our SEO Services.We have planned strategy and protocol which will be followed to give our clients website top slot in the Search Engine.</p>
                 </div>
@@ -111,7 +139,7 @@
                 <ng-template rotateCarouselItem>
                         <div class="carouselTxt">
                         <h5 style="padding: 12px;">Hi ! I'm <span class="clientName">Deepan Chakravarthi</span></h5>
-                        <div style="float:left;"><img class="Myavatar" src="../../assets/images/DK.jpeg"></div>
+                        <div style="float:left;"><img class="Myavatar" src="../../assets/images/deepan.jpg"></div>
                         
                         " I recommend Unitrix to everyone looking for app development. 
 The developers at the company were prompt in developing the seamless mobile applications 
@@ -136,8 +164,7 @@ I am really impressed by their talent and professionalism."</div>
         <img src="../../assets/images/careers-bg.png" width="48%" style="padding-top: 6%;">
         <h5 style="padding-top:2%;">Unitrix - Together we are better</h5>
         <div class="row" style="padding-top: 1%;
-        font-size: 15px;
-        width: 58%;">
+        font-size: 15px;">
                 <p>Good teams make the structure on which successful businesses are built and good team members are the building blocks of this structure.</p>
                 <p>Our teams are small. They have clear goals. And the common bond between team members is collaborative spirit and mutual trust.</p>
         </div>
@@ -156,7 +183,7 @@ I am really impressed by their talent and professionalism."</div>
         <div class="row">
                 <img src="../../assets/images/res.jpg" style="margin-left: 21%;width: 54%;">
                 <p class="at center">
-                        At Unitrix, we believe your business deserves better Application - application that’s ready to go, easy to setup and use, and requires minimal customization. All of our service live up to this promise and are backed by our world-class support.
+                         We target the progress of web solutions to the requirement of the organization and align the layout towards the client who will value it to show outstanding experience, to reform processes, to deliver unique services over the internet and to unite information cautiously in a centralized cache and access it in real time.
                 
                 </p>
                 <div class="row center" style="margin-top:2% !important;">
@@ -166,7 +193,6 @@ I am really impressed by their talent and professionalism."</div>
 </div>
 
 <div class="row center" style="margin: 6% 0px;">
-<div class="floatText">W<span></span></div>
-        <h6 class="col s12 webContent" style="font-size: 15px;">" We target the progress of web solutions to the requirement of the organization and align the layout towards the client who will value it to show outstanding experience, to reform processes, to deliver unique services over the internet and to unite information cautiously in a centralized cache and access it in real time."</h6>
+
 </div>
 </div>
