--- a/src/app/mob-dev/mob-dev.component.html
+++ b/src/app/mob-dev/mob-dev.component.html
@@ -1,19 +1,19 @@
 <div class="row" style="margin-top: 8%;padding: 0px 40px;">
-  <div class="col s6 one">
+  <div class="col l6 s12">
   <h1 class="subHead">MOBILE APPLICATION DEVELOPMENT</h1>
-  <div class="floatText">M</div>
+  <div class="floatText hide-on-small-only">M</div>
   <h3 class="line">What Set Us Apart From Competitive Indian Mobile App Developers?</h3>
   <h6 class="our">We fuel your idea with practical solutions. We are not only into acquiring clients, we have an approach to maintain a lifelong relationship with every client of ours and be on our toes to assist them in any development need at any tick of the clock. We define the apps feature and functionality with a future perspective. Of course, the app will lure the present audience but we design and develop it in a manner which makes it future ready as well.</h6>
   <span class="uniRedBtn" routerLink="/Get-started">Get Quote <i class="fas fa-arrow-right"></i></span>
   </div>
-  <div class="col s3 two center">
+  <div class="col l3 s12 serviceMIssue center">
     <div><img class="UIimg" width="100%" src="../../assets/images/android.webp"></div>
     <h6 class="center clientName">Android Development</h6>
     <p class="center our">we strategies your plan and apply necessary 
 methodology to create a perfect app for your business.</p>
   <a href=""><i class="fab fa-youtube"></i></a>
   </div>
-  <div class="col s3 three center">
+  <div class="col l3 s12 center">
     <div><img class="UIimg" width="100%" src="../../assets/images/ios.webp"></div>
     <h6 class="center clientName">IOS Development</h6>
     <p class="center our">We develop the most innovative iPhone Applications. We have methodology to create a perfect app for your business.</p>
@@ -22,26 +22,26 @@ methodology to create a perfect app for your business.</p>
 </div>
 
 <div class="row" style="margin-top: 13%;padding: 0px 50px;margin-bottom: 0%;">
-<div class="floatText">AP<span>P</span></div>
-  <div class="col s5">
+<div class="floatText hide-on-small-only">AP<span>P</span></div>
+  <div class="col l5 s12">
     <h3 class="line">Mobile Applications Development</h3>
   </div>
-  <div class="col s7 our" style="margin-bottom: 0%;">Our Agile Mobile App Developers	team constantly strives to make applications more robust and secure. Our coding process is unique because we don’t just code, we make a wonderful blend of HTML5, CSS and JavaScript. We also have a proven experience in using Eclipse, OpenGL, PhoneGap, Rhomobile, Appcelerator Titanium, iCloud and Amazon web services to develop powerful apps for you <div style="color:#000;">Android - IOS - Hybrid</div></div>
+  <div class="col l7 s12 our" style="margin-bottom: 0%;">Our Agile Mobile App Developers	team constantly strives to make applications more robust and secure. Our coding process is unique because we don’t just code, we make a wonderful blend of HTML5, CSS and JavaScript. We also have a proven experience in using Eclipse, OpenGL, PhoneGap, Rhomobile, Appcelerator Titanium, iCloud and Amazon web services to develop powerful apps for you <div style="color:#000;">Android - IOS - Hybrid</div></div>
  
  </div>
 
 
 
 <div class="row">
-<div class="col s5">
+<div class="col l5 s12">
   <img src="../../assets/images/iphone.png" alt="iphoneImg" width="100%">
 </div>
-<div class="col s7">
+<div class="col l7 s12">
   <h5 style="padding: 0 0 15px 8px;
     margin-top: 8% !important;">TYPES OF MOBILE APPS WE DEVELOP :</h5>
   <div class="our" style="padding-left: 10px;">Capitalize on low hanging fruit to identify a ballpark value added activity to betaPodcasting Override the digital divide with additional clickthroughs from Devtechnology</div>
   <div class="row">
-  <div class="col s6">
+  <div class="col l6 s12">
     <ul class="our">
                 <li><i class="fas fa-map-pin"></i>  Business Apps Development</li>
 								<li><i class="fas fa-map-pin"></i>  Education Apps Development</li>
@@ -57,7 +57,7 @@ methodology to create a perfect app for your business.</p>
 								<li><i class="fas fa-map-pin"></i>  Product Showcase App Development</li>
                                 </ul>
   </div>
-  <div class="col s6">
+  <div class="col l6 s12">
     <ul class="our">
                   <li><i class="fas fa-map-pin"></i>  Website Mobile App Development</li>	
                   <li><i class="fas fa-map-pin"></i>  POS ( point of sale ) Mobile App Development</li>	
