--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="footer">
 <div class="row mobilepaddz" style="padding: 50px 34px 38px;">
-  <div class="col s3 ">
+  <div class="col l3 s4 ">
       <span class="FooterTitle">Services</span>
     <ul>
       <li routerLink="/App-Development">Web Development</li>
@@ -13,7 +13,7 @@
       <li routerLink="/UI-Development">UX/Wordpress</li>
     </ul>
   </div>
-  <div class="col s3 ">
+  <div class="col l3 s4 ">
     <span class="FooterTitle">Company</span>
     <ul>
         <li routerLink="/home">Home</li>
@@ -24,9 +24,9 @@
         <li routerLink="/team">Contact us</li>
       </ul>
   </div>
-  <div class="col s3">
+  <div class="col l3 s4">
     <div class="row">
-        <span class="FooterTitle">Social</span>
+        <span class="FooterTitle">Follow Us</span>
         <ul>
             <li><i class="fab fa-facebook"></i> Facebook</li>
             <li><i class="fab fa-instagram"></i> Instragram</li>
@@ -36,7 +36,7 @@
           </ul>
     </div>
   </div>
-  <div class="col s3 center hide-on-small-only">
+  <div class="col l3 center hide-on-small-only">
       <div style="margin-top:17%;"> <img src="../../assets/images/my-logo.png" style="width: 75%;"> </div>
       <div class="row">
           <i class="fas fa-mortar-pestle"></i> "Your Content is Our Concern"....
