--- a/src/app/photo-zing/photo-zing.component.css
+++ b/src/app/photo-zing/photo-zing.component.css
@@ -9,8 +9,11 @@
   position: absolute;
     width: 100%;
     z-index: -1;
-    height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     top: 0;
+    height: 100%;
 }
 .quality h2{
     font-size: 2rem;
@@ -97,5 +100,8 @@ ul li:hover {
       -ms-flex: 100%;
       flex: 100%;
       max-width: 100%;
+    }
+    .zingimg{
+      height:50%;
     }
   }
