--- a/src/app/photo-zing/photo-zing.component.html
+++ b/src/app/photo-zing/photo-zing.component.html
@@ -1,7 +1,8 @@
-<img class="zingimg" src="../../assets/images/back.jpg">
-<div class="row">
+
+<div class="row s12">
+<img class="zingimg s12" src="../../assets/images/back.jpg">
   <p id="zing">PhotoZing</p>
-  <span class="center letter-spacing"><h4 style="font-weight: 300;font-size: 2.5rem;">When photography meets computer vision</h4>
+  <span class="center letter-spacing"><h4 style="font-weight: 300;font-size: 25px;">When photography meets computer vision</h4>
     <p>Get your photo & video shoots around the world in 24h</p></span>
 </div>
 
@@ -33,18 +34,18 @@
 </mz-modal>
 
 <div class="row quality center">
-  <h2>A tailor-made service :<span style="color: #44b3c6;"> simple</span> & <span style="color:#c3668a;"> effective</span> </h2>
-  <div class="col s4">
+  <h2>A tailor-made service -<span style="color: #44b3c6;"> simple</span> & <span style="color:#c3668a;"> effective</span> </h2>
+  <div class="col l4 s12">
     <img class="Qimg" src="../../assets/images/zing/ico-photographers-rocket-shadow.svg">
     <h5>Standardized Quality</h5>
     <p class="center Qcontent">Our photographers are selected by our teams and benefit from continuous training to guarantee our standards of excellence</p>
   </div>
-  <div class="col s4">
+  <div class="col l4 s12">
     <img class="Qimg" src="../../assets/images/zing/ico-photographers-diamond-shadow.svg">
     <h5>In large scale</h5>
     <p class="center Qcontent">With 40,000 professional photographers, we operate thousands of photo shoots daily in more than 100 countries</p>
   </div>
-  <div class="col s4">
+  <div class="col l4 s12">
     <img class="Qimg" src="../../assets/images/zing/ico-photographers-time-shadow.svg">
     <h5>Quick delivery</h5>
     <p class="center Qcontent">We deliver your photos in 24h around the world</p>
@@ -55,7 +56,7 @@
 <div class="row border" style="margin-top: 12% !important;">
   <h4 class="we">Services..</h4>
   <div class="row">
-    <div class="col s4 center">
+    <div class="col l4 s12 center">
         <ul>
             <li>HDR POST PROCESSING</li>
             <li>SINGLE EXPOSURE PROCESSING</li>
@@ -64,7 +65,7 @@
           </ul>
     </div>
 
-    <div class="col s4 center">
+    <div class="col l4 s12 center">
         <ul>
             <li>360 DEGREE PANORAMA</li>
             <li>FLOOR PLAN FROM SKETCH</li>
@@ -74,7 +75,7 @@
           </ul>
     </div>
 
-    <div class="col s4 center">
+    <div class="col l4 s12 center">
         <ul>
             <li>CLIPPING FOR COMPLEX OBJECTS</li>
             <li>CLIPPING PATH</li>
@@ -85,7 +86,7 @@
   </div>
 </div>
 
-<div class="row things">
+<div class="row things hide-on-small-only">
   <p class="center" style="font-weight: 300;
   font-size: 1.5rem;
   margin-top: 10% !important;">Things we do in Image Editing</p>
@@ -93,14 +94,14 @@
 </div>
 
   <!-- SECTORS -->
-  <div class="row" style="margin-top: 12% !important;">
+  <div class="row hide-on-small-only" style="margin-top: 12% !important;">
     <h4 class="we">Sectors..</h4>
     <div class="row center" style="margin: 0 25%;">
-      <div class="col s2">Real Estate</div>
-      <div class="col s2">Food</div>
-      <div class="col s2">Experiences</div>
-      <div class="col s2">Ecommerce</div>
-      <div class="col s2">Office</div>
-      <div class="col s2">Retail</div>
+      <div class="col l2 s4">Real Estate</div>
+      <div class="col l2 s4">Food</div>
+      <div class="col l2 s4">Experiences</div>
+      <div class="col l2 s4">Ecommerce</div>
+      <div class="col l2 s4">Office</div>
+      <div class="col l2 s4">Retail</div>
     </div>
 </div>
