--- a/src/app/started/started.component.html
+++ b/src/app/started/started.component.html
@@ -1,12 +1,12 @@
 <div class="row started" style="padding-top:8%">
-
-    <div class="col s6" style="padding: 0px 70px 0px 150px">
+    <div class="col l1"></div> 
+    <div class="col l4 s12">
         <h3>Submit Your Requirement</h3>
         <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem quas esse adipisci sapiente ad asperiores doloremque</h6>
         <img src="../../assets/images/image.jpg" style="width: 100%;">
     </div>
   
-  <div class="col s6" style="">
+  <div class="col l6 s12" style="">
            <h4 class="center" style="padding-bottom: 5%;font-weight: 300;color: #919293;">Enter the Details..</h4>
            <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
               <div class="col s6">
@@ -48,9 +48,10 @@
                                     <option value="2">Desktop Application</option>
                                     <option value="3">Mobile Apps</option>
                                     <option value="4">Search Engine Optimization</option>
-                                    <option value="5">Ecommerce</option>
-                                    <option value="6">Firebase</option>
-                                    <option value="7">UX/Wordpress</option>
+                                    <option value="5">Photo outsourcing</option>
+                                    <option value="6">Ecommerce</option>
+                                    <option value="7">Digital marketing</option>
+                                    <option value="8">UI/Wordpress</option>
                                     
                                   </select>
                                 </mz-select-container>
@@ -73,4 +74,5 @@
                           </div>
                       </form>
           </div>
+          <div class="col l1"></div> 
 </div>
