--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -4,11 +4,11 @@
 
 
 <div class="row qoutes left" style="margin-top: 62px;">
-    <div class="col s5" style=" padding-top: 15%;">
+    <div class="col l5 s12" style=" padding-top: 15%;">
         <img src="../../assets/images/my-logo.png" id="logo">
     </div>
     
-    <div class="col s7">
+    <div class="col l7 s12">
         <div class="teamContent"><i class="fas fa-globe-americas"></i><span class="teamTITLE">Our Vision</span>
             <div>Pigment the dazzling destination to trade engaging on digital outlook.</div>
         </div>
@@ -16,7 +16,7 @@
         <div class="teamContent"><i class="fas fa-chart-line"></i><span class="teamTITLE">Our Mission</span>
         <div>Entrust contemporary and innovative web and mobile software solution to business varying from startups to enterprise with affordability and contentment.</div>
         </div>
-
+ <div class="floatText" style="right:3% !important;left: unset;">T<span></span></div>
         <div class="teamContent"><i class="fa fa-users shuu" aria-hidden="true"></i><span class="teamTITLE">Our Team</span>
         <div>Our web and mobile software engineers are engaged with customers and commercial teams to deliver the prime element with market correspondence. In due course, we have devised eminently conductive and collaborative development and working atmosphere using the trending architectural facilities and communication technologies. Hence, our customers sense ultimate amenity despite language, culture, and time zone hurdles.</div>
         </div>
@@ -28,15 +28,15 @@
 
  
 <div class="row center">
-    <img src="../../assets/images/careers-bg.png" style="padding-top: 8%;">
+    <img src="../../assets/images/careers-bg.png" class="mobileimgT" style="padding-top: 8%;">
 </div>
 
 <div class="row" style="padding-top: 4%;">
-    <div class="col s5" style="padding: 20px 100px;">
+    <div class="col l1"></div>
+    <div class="col l4 s12">
         <div class="row">
-        <div class="floatText" style="left: 8px;">C<span>O</span></div>
-                <p class="styleTxt center">Unitrix</p>
-                <ul class="icon" style="text-align: -webkit-center;">
+                <p class="styleTxt">Unitrix</p>
+                <ul class="icon">
                     <li>
                         <div>
                         <img class="Myavatar" src="../../assets/images/jaganRamanikanth.png">
@@ -49,8 +49,8 @@
                   </ul>
         </div>
         <div class="row">
-                <p class="styleTxt center">PhotoZing</p>
-                <ul class="icon" style="text-align: -webkit-center;">
+                <p class="styleTxt ">PhotoZing</p>
+                <ul class="icon">
                     <li>
                         <div>
                         <img class="Myavatar" src="../../assets/images/DK.jpeg">
@@ -63,7 +63,7 @@
                   </ul>
         </div>
     </div>
-    <div class="col s6">
+    <div class="col l6 s12">
     <div class="card" style="padding: 12px 10px;
     border-radius: 4px;">
         <h5 class="center" style="font-weight: 300;">Get in touch with us</h5>
@@ -103,13 +103,14 @@
                               [placeholder]="'......'"
                               [label]="'Choose Your Service'">
                               
-                              <option value="1">Web Development</option>
-                              <option value="2">Desktop Application</option>
-                              <option value="3">Mobile Apps</option>
-                              <option value="4">Search Engine Optimization</option>
-                              <option value="5">Ecommerce</option>
-                              <option value="6">Firebase</option>
-                              <option value="7">UX/Wordpress</option>
+                                    <option value="1">Web Development</option>
+                                    <option value="2">Desktop Application</option>
+                                    <option value="3">Mobile Apps</option>
+                                    <option value="4">Search Engine Optimization</option>
+                                    <option value="5">Photo outsourcing</option>
+                                    <option value="6">Ecommerce</option>
+                                    <option value="7">Digital marketing</option>
+                                    <option value="8">UI/Wordpress</option>
                               
                             </select>
                           </mz-select-container>
@@ -133,6 +134,7 @@
                 </form>
       </div> 
     </div>
+    <div class="col l1"></div>
     
 </div>
 
