--- a/src/styles.css
+++ b/src/styles.css
@@ -46,7 +46,7 @@ p,h1,h2,h3,h4,h5{
 }
 .floatText{
     position: absolute;
-    left: 48px;
+    left: 6%;
     line-height: 120px;
     font-size: 400px;
     font-weight: 700;
@@ -65,11 +65,12 @@ p,h1,h2,h3,h4,h5{
     border: 1px solid #eee;
     border-radius: 4px;
     letter-spacing: .2px;
-    padding: 10px;
+    padding: 5px;
     color: #5f5f65;
 }
 .dropdown-content{
     border-radius: 4px !important;
+    
 }
 .dropdown-content li>a{
     line-height: 30px !important;
@@ -98,6 +99,7 @@ p,h1,h2,h3,h4,h5{
     content: '';
     margin-top: 3%;
     left: 46%;
+    bottom: 0%;
     width: 42px;
     height: 3px;
     background-color: #fa7400;
@@ -110,6 +112,10 @@ p,h1,h2,h3,h4,h5{
 }
 .three{
     width: 29% !important;
+}
+.we{
+    width: 100% !important;
+    margin-left:0px !important;
 }
 .subHead{
     position: relative;
@@ -137,7 +143,7 @@ p,h1,h2,h3,h4,h5{
 .border{
     border: 1px solid #d1d1d1;
     padding: 20px 0 0 0;
-    margin: 0px calc(100% - 92%) !important;
+    margin: 0px calc(100% - 90%) !important;
     border-radius: 4px;
 }
 .we{   
@@ -147,7 +153,7 @@ p,h1,h2,h3,h4,h5{
     font-weight: 300;
     margin-bottom: 2% !important;
     text-align: center;
-    margin-left: 37% !important;
+    margin-left: 37%;
 }
 .modal.bottom-sheet{
     max-height: 50% !important;
@@ -166,9 +172,21 @@ p,h1,h2,h3,h4,h5{
 .dropdown-content > li{
     color: #2168f3 !important;
 }
+.logoImg:focus{
+    outline: 0;
+}
 
 @media only screen and (max-width: 600px){
     .mobilepaddz{
         padding: 0px !important;
+    }
+    .serviceMIssue{
+        margin-top: 9%;
+    }
+    .subHead{
+        margin-top: 10% !important;
+    }
+    .started{
+        margin-top: 10% !important;
     }
 }
