--- a/src/app/photo-zing/photo-zing.component.html
+++ b/src/app/photo-zing/photo-zing.component.html
@@ -8,7 +8,7 @@
 
 <div class="row center"> <span class="uniRedBtn" (click)="bottomSheetModal.openModal()" >Order Now</span></div>
 
-<mz-modal #bottomSheetModal [fixedFooter]="true" [bottomSheet]="true" [options]="modalOptions">
+<mz-modal #bottomSheetModal [fixedFooter]="true" [bottomSheet]="true">
   <mz-modal-header>
     
   </mz-modal-header>
