--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -128,7 +128,7 @@
                         </div>
                     </div>
                     <div class="form-group center">
-                        <button [disabled]="loading" class="uniRedBtn" style="line-height: 0px;
+                        <button class="uniRedBtn" style="line-height: 0px;
                         padding: 17px 27px;">Submit</button>
                     </div>
                 </form>
