--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,11 +4,11 @@
 <div class="homeComponent" style="margin-top:62px !important;">
 
 
-<div class="row" style="margin-top:8%;">
+<div class="row" style="margin-top:12%;">
         <div class="col center l1 s12"></div>
         <div class="col center l5 s12">
                 <img  src="../../assets/images/my-logo.png" id="logo">
-                <p class="mobileC" style="letter-spacing:0.4px;margin-bottom:2% !important;">" At Unitrix, we believe your business deserves better Application - application that’s ready to go, easy to setup and use, and requires minimal customization. All of our service live up to this promise and are backed by our world-class support. "</p>
+                <p class="mobileC" style="letter-spacing:0.4px;">" At Unitrix, we believe your business deserves better Application - application that’s ready to go, easy to setup and use, and requires minimal customization. All of our service live up to this promise and are backed by our world-class support. "</p>
                 <div class="row mobileBtn center">
                 <span class="uniRedBtn" routerLink="/Get-started">GET STARTED</span>
         </div>
@@ -16,13 +16,13 @@
         <div class="col l5 s12"> 
         <img width="90%" src="../../assets/images/Uback.gif" style="margin-top: 4%;">
 
-                <div class="provideService">
+                <div class="provideService ">
                         <div class="row center">
                         <div class="col ss l4 s4">
                                 <div> <span class="mydot"></span>UI/UX</div>
                         </div>
                         <div class="col ss l4 s4">
-                                <div> <span class="mydot"></span>Web/Mobile Application</div>
+                                <div> <span class="mydot"></span>Web/Mobile </div>
                         </div>
                         <div class="col ss l4 s4">
                                 <div> <span class="mydot"></span>Desktop Application</div>
@@ -149,7 +149,7 @@ I am really impressed by their talent and professionalism."</div>
                 </ng-template>
                 <ng-template rotateCarouselItem>
                         <div class="carouselTxt">
-                        <h5 style="padding: 12px;">Hi ! I'm <span class="clientName">Felicia Robert</span></h5>
+                        <h5 style="padding: 12px;">Hi ! I'm <span class="clientName">Dhanush Kodi</span></h5>
                         <div style="float:left;"><img class="Myavatar" src="../../assets/images/DK.jpeg"></div>
                         "Unitrix is a highly skilled team with an eye for details.
  We got exactly what we wanted and more. The project management and communication team 
