--- a/src/app/web-dev/web-dev.component.html
+++ b/src/app/web-dev/web-dev.component.html
@@ -7,7 +7,7 @@
   <span class="uniRedBtn" style="margin-bottom:3%;" routerLink="/Get-started">Get Quote <i class="fas fa-arrow-right"></i></span>
   </div>
   <div class="col l3 s12  center serviceMIssue">
-    <div><img class="UIimg" style="height: 156px;" width="100%" src="../../assets/images/ui.webp"></div>
+    <div><img class="UIimg" style="height: 25vh;" width="100%" src="../../assets/images/ui.webp"></div>
     <h6 class="center clientName">UI</h6>
     <p class="center our">Implement Visual language into functional prototypes and applications. Integrate style guides, build assets, and define the visuals.</p>
   <a href=""><i class="fab fa-youtube"></i></a>
