--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,167 +1,166 @@
-#logo{
-    padding-top: 15px;
-    margin-left: 23px;
-    cursor: pointer;
-    position: absolute;
-    width: 3%;
+#logo {
+  padding-top: 15px;
+  margin-left: 23px;
+  cursor: pointer;
+  position: absolute;
+  width: 3%;
 }
-.header{
-    height: 62px;
-    margin: 0px;
-    top: 0;
-    position: fixed;
-    z-index: 1;
-    width: 100%;
-    background: #ffffff;
+.header {
+  height: 62px;
+  margin: 0px;
+  top: 0;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  background: #ffffff;
 }
-.navName{
-    padding: 4px 17px;
+.navName {
+  padding: 4px 17px;
 }
-.navName:focus{
-    outline: 0;
+.navName:focus {
+  outline: 0;
 }
-.headerContent{
-    margin-top: 18px;
-    text-align: right;
-    font-weight: 400;
-    font-size: 14px;
-    letter-spacing: 2px;
+.headerContent {
+  margin-top: 18px;
+
+  text-align: right;
+  font-weight: 400;
+  font-size: 14px;
+  letter-spacing: 2px;
 }
-.topmar{
-    margin-top: 18px;
-    text-align: center;
+.topmar {
+  margin-top: 18px;
+  text-align: center;
 }
-.navName:hover{
-    cursor: pointer;
-    color: rgba(0,0,0,0.87);
-    font-weight: 600;
+.navName:hover {
+  cursor: pointer;
+  color: rgba(0, 0, 0, 0.87);
+  font-weight: 600;
 }
-.TextBold{
-    color: rgba(0,0,0,0.87);
-    font-weight: 600;
+.TextBold {
+  color: rgba(0, 0, 0, 0.87);
+  font-weight: 600;
 }
-.ServiceData{
-    display: none;
-    position: absolute;
-    background: #fff;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    text-align: right;
-    top: 55px;
-    width: 80%;
-    padding: 17px 23px 17px 23px;
-    border: .5px solid #d9d5d5;
-    right: 8%;
-    border-radius: 4px;
+.ServiceData {
+  display: none;
+  position: absolute;
+  background: #fff;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  text-align: right;
+  top: 55px;
+  width: 80%;
+  padding: 17px 23px 17px 23px;
+  border: 0.5px solid #d9d5d5;
+  right: 8%;
+  border-radius: 4px;
 }
-.ServiceData li:hover{
-    padding: 2px 10px;
-    background: #2168f3;
-    color: #fff;
-    border: 1px solid #2168f3;
-    border-radius: 4px;
-    
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+.ServiceData li:hover {
+  padding: 2px 10px;
+  background: #2168f3;
+  color: #fff;
+  border: 1px solid #2168f3;
+  border-radius: 4px;
+
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 .ServiceData li {
-    margin: 8px 0;
-    padding: 2px 10px;
+  margin: 8px 0;
+  padding: 2px 10px;
 }
-.content{
-    padding: 15px 20px;
-    margin-top: 1%;
+.content {
+  padding: 15px 20px;
+  margin-top: 1%;
 }
-.content:hover{
-    background: #f5f5f5;
-    border-radius: 4px;
+.content:hover {
+  background: #f5f5f5;
+  border-radius: 4px;
 }
-.content:focus { outline: none; }
-.headService{
-    font-size: 14px;
-    padding-left: 21px;
-    margin: 0px;
-    padding-top: 3px;
+.content:focus {
+  outline: none;
 }
-.headerService{
-    letter-spacing: 0px !important;
+.headService {
+  font-size: 14px;
+  padding-left: 21px;
+  margin: 0px;
+  padding-top: 3px;
 }
-.headerService:hover .ServiceData{
-    display: inherit;
+.headerService {
+  letter-spacing: 0px !important;
+}
+.headerService:hover .ServiceData {
+  display: inherit;
 }
 /* this CS forms the triangles */
 .ServiceData:after,
 .ServiceData:before {
-    content: '';
-    display: block;
-    position: absolute;
-    left: 100%;
-    width: 0;
-    height: 0;
-    border-style: solid;
+  content: "";
+  display: block;
+  position: absolute;
+  left: 100%;
+  width: 0;
+  height: 0;
+  border-style: solid;
 }
-
-
 
 /* this border color controlls the color of the triangle (what looks like the fill of the triangle) */
 .ServiceData:after {
-    top: -16px;
-    border-color: transparent transparent #2168f3 transparent;
-    border-width: 8px;
-    left: calc(100% - 51%);
+  top: -16px;
+  border-color: transparent transparent #2168f3 transparent;
+  border-width: 8px;
+  left: calc(100% - 51%);
 }
 
-.hide-on-large-only  #logo{
-    padding-top: 15px;
-    margin-left: 0px;
-    cursor: pointer;
+.hide-on-large-only #logo {
+  padding-top: 15px;
+  margin-left: 0px;
+  cursor: pointer;
+  position: absolute;
+  width: 6%;
+}
+.deskImg {
+  z-index: 1;
+  width: 4%;
+  padding: 18px 0px;
+}
+.logoImg {
+  position: fixed;
+  cursor: pointer;
+  left: 15px;
+}
+@media only screen and (max-width: 600px) {
+  .mobile {
+    padding: 0px;
+    margin-top: 4px;
+  }
+  .mobHead {
+    padding: 8px 4px 0 10px;
+    font-weight: 300;
+  }
+  .logoImg {
+    width: 11%;
     position: absolute;
-    width: 6%;
-}
-.deskImg{
-    z-index: 1;
-    width: 4%;
-    padding: 18px 0px;
-}
-.logoImg{
-    position: fixed;
-    cursor: pointer;
     left: 15px;
-}
-@media only screen and (max-width: 600px){
-    .mobile{
-        padding: 0px;
-        margin-top: 4px;
-    }
-    .mobHead{
-        padding: 8px 4px 0 10px;
-        font-weight: 300;
-    }
-    .logoImg{
-        width: 11%;
-        position: absolute;
-        left: 15px;
-        top:0px;
-    }
-    #logo{
-        padding-top: 10px !important;
-        width: 9% !important;
-        float: left;
-        margin: unset;
-    }
-    #mobile{
-        padding: 6px 18px;
-        float: right;
-        margin-right: 3px;
-       
-        line-height: 14px;
-    }
-    .mobile-head .s2{
-        margin-right: 1px !important;
-    }
-    .mobileHeader{
-        
-        margin-bottom: 0px;
-        padding-top: 9px;
-       
-    }
+    top: 0px;
+  }
+  #logo {
+    padding-top: 10px !important;
+    width: 9% !important;
+    float: left;
+    margin: unset;
+  }
+  #mobile {
+    padding: 6px 18px;
+    float: right;
+    margin-right: 3px;
+
+    line-height: 14px;
+  }
+  .mobile-head .s2 {
+    margin-right: 1px !important;
+  }
+  .mobileHeader {
+    margin-bottom: 0px;
+    padding-top: 9px;
+  }
 }
