--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -53,8 +53,8 @@
 
 
     <span class="navName Servicebar" style="padding-bottom: 25px;" id="ServiceDown">Services <i class="fas fa-angle-down"></i></span>
-    <span class="navName hide-on-small-only"  routerLink="/Portfolio" routerLinkActive="TextBold">Portfolio</span>
-    <span class="navName hide-on-small-only"  routerLink="/Cloud" routerLinkActive="TextBold"><i class="fas fa-cloud"></i> Cloud</span>
+    <span class="navName hide-on-small-only"  >Portfolio</span>
+    <span class="navName hide-on-small-only"  ><i class="fas fa-cloud"></i> Cloud</span>
     <span class="navName "  routerLink="/team" routerLinkActive="TextBold">Team</span>   
   </div>
   
