--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -57,7 +57,7 @@
 </div>
 
 <!-- What we do -->
-<div class="row border" style="padding-bottom: 20px;">
+<!-- <div class="row border" style="padding-bottom: 20px;">
         <h4 class="we">What we do..</h4>
         <div class="Innovation center">Innovation for Everyone..</div>
         <div class="col s12">
@@ -94,7 +94,7 @@
         </div>
         
 </div>
-
+ -->
 
 <!-- Service -->
 <div class="service border" style="margin-top:10% !important;">
