--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -54,8 +54,8 @@
 
     <span class="navName Servicebar" style="padding-bottom: 25px;" id="ServiceDown">Services <i class="fas fa-angle-down"></i></span>
     <span class="navName hide-on-small-only"  >Portfolio</span>
-    <span class="navName hide-on-small-only"  ><i class="fas fa-cloud"></i> Cloud</span>
-    <span class="navName "  routerLink="/team" routerLinkActive="TextBold">Team</span>   
+    <span class="navName"  routerLink="/Xplore" routerLinkActive="TextBold">Xplore</span>
+    <span class="navName hide-on-small-only"  routerLink="/team" routerLinkActive="TextBold">Team</span>   
   </div>
   
   <div class="col s2 topmar hide-on-small-only">
